[package]
name = "biscuit"
version = "0.1.0"
authors = ["Hideyuki Teramura <hide4d51@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
toml = "0.5"
alpm-rs = "0.1.24"
serde = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = [ "serde" ] }
